--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,12 @@
         <form id="alunoForm">
             <input type="hidden" id="alunoId">
             
+            <!-- Campo para inserir ID manualmente -->
+            <div class="form-group" id="idContainer">
+                <label for="idInput">ID:</label>
+                <input type="text" id="idInput" placeholder="Insira o ID ou deixe em branco para gerar automaticamente">
+            </div>
+            
             <div class="form-group">
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" required>
