--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,10 +13,10 @@
         <form id="alunoForm">
             <input type="hidden" id="alunoId">
             
-            <!-- Campo para inserir ID manualmente -->
             <div class="form-group" id="idContainer">
                 <label for="idInput">ID:</label>
                 <input type="text" id="idInput" placeholder="Insira o ID ou deixe em branco para gerar automaticamente">
+                <div id="idError" class="error-message"></div>
             </div>
             
             <div class="form-group">
